--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "^10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^2.3.5",
     "remark": "^12.0.0",
     "remark-html": "^12.0.0",
